# faythe

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  config.json  crate-hashes.json  flake.nix  renovate.json  vault-test.yml
.github/workflows/: build.yml  bump.yml  checks.yml  cheks.yml
config-samples/: file-webhook.json  vault-nsupdate.json
nixos/: file-test.nix  lib.nix  vault-test.nix
src/: common.rs  config.rs  dns.rs  file.rs  issuer.rs  kube.rs  main.rs  metrics.rs  monitor.rs  vault.rs
src/dns/: mod.rs  nsupdate.rs  webhook.rs
test/: expired.pem  longlived.pem  req.conf  wildcard.pem
