[package]
name = "faythe"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "=4.5.29", features = ["cargo"] } # We force 4.4 so we don't have to use rustc 1.74
serde = "1"
serde_derive = "1"
serde_json = "1"
openssl = "0.10"
base64 = "0.22"
acme-lib = { git = 'https://github.com/DBCDK/acme-lib', branch = 'dbc-fork' }
regex = "1"
lazy_static = "1"
walkdir = "2"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
env_logger = "0.11"
tokio = { version = "1", features = [ "full" ] }
async-trait = { version = "0.1" }
dbc-rust-modules = { git = "https://github.com/dbcdk/rust-modules", branch = "main" }
vaultrs = "0.7"
vaultrs-login = "0.2"
url = "2"
chrono = "0.4"
num-traits = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
prometheus = "0.14.0"
hyper = { version = "1.6.0", features = ["server"] }
hyper-util = "0.1.12"

[profile.release]
panic = "abort"

